--- a/SportsSideKick/app/src/main/res/values-fr/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="language_current">French</string>
+    <!--<string name="language_current">French</string>-->
     <!--<string name="friend_requests">Demandes d'ami</string>-->
     <!--<string name="app_name">SportsSideKick</string>-->
 
@@ -109,10 +109,10 @@
         <!--<item quantity="other">%d Jours</item>-->
     <!--</plurals>-->
 
-    <string name="member_info">Member info</string>
+    <!--<string name="member_info">Member info</string>-->
 
 
-    <!-- tutorial values -->
-    <string name="share_using">Share with:</string>
+    <!--&lt;!&ndash; tutorial values &ndash;&gt;-->
+    <!--<string name="share_using">Share with:</string>-->
 
 </resources>
