--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="video_chat">Video Chat</string>
     <string name="radio">Club Radio</string>
     <string name="tv">Club TV</string>
+    <string name="store">Store</string>
     <string name="quiz">Quiz</string>
     <string name="fantasy">Fantasy</string>
 
@@ -26,13 +27,14 @@
     </string-array>
 
     <!-- Login & Register -->
-    <string name="login_slider_text_1_phone">Bringing <font color="#c3ff01">fans</font> together</string>
-    <string name="to_access_full_features">To access full features …</string>
-    <string name="login_login">Login</string>
-    <string name="login_sign_up">Sign up</string>
+    <string name="slogan">Bringing <font color="#c3ff01">fans</font> together</string>
+    <string name="access_full">To access full features …</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign up</string>
+    <string name="join">Join Now</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="login_login_forgot_text">Forgot?</string>
+    <string name="forgot">Forgot?</string>
     <string name="login_login_message_login_failed">Login failed. Try again later!</string>
     <string name="login_login_message_authentication_failed">Login failed. Check user name and password!</string>
     <string name="forgot_password_text">Reset your password</string>
@@ -46,10 +48,9 @@
     <string name="sign_up_last_name">Last name</string>
     <string name="sign_up_username">Display name</string>
     <string name="sign_up_phone">Phone</string>
-    <string name="sign_up_sign_up">Sign up</string>
     <string name="sign_up_text">By singing up, you are agree to <font color="@android:color/white">Terms and Conditions of Use</font> and <font color="@android:color/white">Privacy Policy.</font></string>
-    <string name="terms_and_privacy">Terms &amp; Privacy</string>
-    <string name="fist_name_warning">Please fill in your first name.</string>
+    <string name="terms">Terms &amp; Privacy</string>
+    <string name="first_name_warning">Please fill in your first name.</string>
     <string name="email_validation_warning">Please fill in your email.</string>
     <string name="display_name_validation_warning">Please fill in your display name.</string>
     <string name="password_validation_warning">Please fill in your password.</string>
@@ -60,7 +61,7 @@
     <string name="login_slider_chat">You can chat with  <font color="#c3ff01">friends, create groups</font>and even connect with your <font color="#c3ff01">favourite players!</font></string>
     <string name="chat_with_friends">Chat with  <font color="#c3ff01">friends.</font></string>
     <string name="reset">Reset</string>
-    <string name="login_or_signup">Login / Sign up</string>
+    <string name="join_now_sign_in">Join Now / Sign In</string>
     <string name="logout_from_app">This will log you out of the app!</string>
     <string name="reset_app">This action will reload the application.</string>
     <string name="registration_error">Registration error. Try again later.</string>
@@ -85,7 +86,9 @@
     <!--Profile-->
     <string name="profile">Profile</string>
     <string name="edit_information">Edit Information</string>
+    <string name="edit_your_profile">Edit Your Profile</string>
     <string name="edit_photo">Edit Photo</string>
+    <string name="done">Done</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="nickname">Nickname</string>
@@ -111,6 +114,10 @@
     <string name="go_to_profile">Go to Profile ></string>
     <string name="enable_wall_notifications">Enable wall notifications</string>
     <string name="disable_wall_notifications">Disable wall notifications</string>
+    <string name="language">Language:</string>
+    <string name="phone">Phone:</string>
+    <string name="user_name">User Name:</string>
+    <string name="caps">Caps</string>
     <string name="choose_your_language">Choose your language</string>
     <string name="language_current" translatable="false">English</string>
     <string-array name="languages" translatable="false">
@@ -131,9 +138,10 @@
     <!--Friends-->
     <string name="friend_profile">Friend Profile</string>
     <string name="friend_requests">Friend Requests</string>
-    <string name="member_since">Member since</string>
     <string name="follows_you">Follows you</string>
     <string name="following_member">Following member</string>
+    <string name="user_profile">User Profile</string>
+    <string name="member_since">Member since</string>
     <string name="your_friends_title">Your Friends</string>
     <string name="your_friends_search_hint">Search your friends</string>
     <string name="your_friends_request">Friend requests</string>
@@ -166,6 +174,19 @@
     <string name="no_friends">No friends</string>
     <string name="follow_more">Follow More</string>
     <string name="friends_following_you">Friends following you:</string>
+    <string name="find">Find</string>
+    <string name="request">Request</string>
+    <string name="official_accounts">Official Accounts</string>
+    <string name="unfriend_tip">Removing a friend will stop you following each other.</string>
+    <string name="unfriend_confirm">Are you sure you want to remove this friend?</string>
+    <string name="no_results">No results</string>
+    <string name="user">User</string>
+    <string name="more">More</string>
+    <string name="friend_you_and">Friend you and</string>
+    <string name="have_in_common">have in common</string>
+    <string name="what_would_you_like_to_do">What would you like to do?</string>
+    <string name="friends_you_have_in_common">Friends you have in common</string>
+    <string name="join_official_account">Join official Account ></string>
 
     <!--Chat-->
     <string name="join_group">Join Group</string>
@@ -235,6 +256,12 @@
     <string name="rename_your_chat">Rename your chat</string>
     <string name="new_name_of_chat_hint">Enter new name of chat here</string>
     <string name="people_in_this_chat">People in this chat</string>
+    <string name="mins_ago">mins ago</string>
+    <string name="this_chat_is_public_phone">This chat is PUBLIC</string>
+    <string name="this_chat_is_private_phone">This chat is PRIVATE</string>
+    <string name="public_chats_profile">Public Chats</string>
+    <string name="is_in">is in</string>
+    <string name="create">Create</string>
 
     <!--Video chat-->
     <string name="video_chat_text_1">Watch the match with your <font color="#c3ff01">friends.</font></string>
@@ -257,6 +284,9 @@
     <string name="create_call">Starting New Call</string>
     <string name="friends_in_video_chat">Friends in Video Chat</string>
     <string name="friend_in_video_chat">1 Friend in Video Chat</string>
+    <string name="no_users_selected">No users selected!</string>
+    <string name="no_users_selected_message">You haven\'t selected anyone to call!</string>
+    <string name="select_friends_to_call">Select friends to call</string>
 
     <!--Next match-->
     <string name="match_next">Next match</string>
@@ -270,59 +300,12 @@
     <string name="match_secs">%1$d Secs</string>
     <string name="up_next">Up next</string>
     <string name="live">Live</string>
-
-    <string name="no_users_selected">No users selected!</string>
-    <string name="no_users_selected_message">You haven\'t selected anyone to call!</string>
-    <string name="tutorial_earn">Tap here to earn 5 for viewing this How to!</string>
-    <string name="user">User</string>
-    <string name="store">Store</string>
-    <string name="search_wall_posts_hint">Search Wall Posts</string>
-    <string name="select_friends_to_call">Select friends to call</string>
-    <string name="no_results">No results</string>
-    <string name="rewards_and_items_received">Rewards and items received from Gym Bags</string>
-    <string name="you_have">YOU HAVE</string>
-    <string name="bonus_gym_bag">+ BONUS GYM BAG</string>
-    <string name="bundles">BUNDLES</string>
     <string name="vs">vs</string>
-    <string name="create">Create</string>
-    <string name="caps">Caps</string>
-
-    <string name="find">Find</string>
-    <string name="request">Request</string>
-    <string name="official_accounts">Official Accounts</string>
-    <string name="back">Back</string>
-    <string name="wallet">Wallet</string>
-    <string name="edit_your_profile">Edit Your Profile</string>
-    <string name="done">Done</string>
-    <string name="language">Language:</string>
-    <string name="phone">Phone:</string>
-    <string name="user_name">User Name:</string>
-    <string name="stash">Stash</string>
-    <string name="join_official_account">Join official Account ></string>
-    <string name="friends_you_have_in_common">Friends you have in common</string>
-    <string name="join_now_sign_in">Join Now / Sign In</string>
-    <string name="join_now">Join Now</string>
-    <string name="sign_in">Sign In</string>
-
-    <string name="this_chat_is_public_phone">This chat is PUBLIC</string>
-    <string name="this_chat_is_private_phone">This chat is PRIVATE</string>
-    <string name="user_profile">User Profile</string>
-    <string name="more">More</string>
-    <string name="friend_you_and">Friend you and</string>
-    <string name="have_in_common">have in common</string>
-    <string name="public_chats_profile">Public Chats</string>
-    <string name="is_in">is in</string>
-    <string name="what_would_you_like_to_do">What would you like to do?</string>
-
-    <string name="mins_ago">mins ago</string>
-
-    <string name="unfriend_tip">Removing a friend will stop you following each other.</string>
-    <string name="unfriend_confirm">Are you sure you want to remove this friend?</string>
 
     <!--Posts & News-->
     <string name="write_post_hint">Write your post here.</string>
-    <string name="news_post_to_wall_title">Post this to your wall?</string>
-    <string name="news_post_to_wall_message">Would you like to post this on your wall?</string>
+    <string name="post_to_wall_title">Post this to your wall?</string>
+    <string name="post_to_wall_message">Would you like to post this on your wall?</string>
     <string name="sharing_message_hint">Enter a message with your shared post…</string>
     <string name="comment_hint">Enter your comment here…</string>
     <string name="read_more_closed">Read more  &gt;</string>
@@ -332,6 +315,7 @@
     <string name="posts">Posts</string>
     <string name="post">Post</string>
     <string name="comments">Comments</string>
+    <string name="back">Back</string>
 
     <!--Stats-->
     <string name="permission_storage_rationale">You need to enable Write permission.</string>
@@ -346,5 +330,13 @@
     <string name="demo_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="demo_number_1" translatable="false">204</string>
     <string name="demo_number_2" translatable="false">6901</string>
+
+    <!--Purchases-->
+    <string name="you_have">You have</string>
+    <string name="rewards_and_items_received">Rewards and items received from Gym Bags</string>
+    <string name="bonus_gym_bag">+ Bonus gym bag</string>
+    <string name="bundles">Bundles</string>
+    <string name="wallet">Wallet</string>
+    <string name="stash">Stash</string>
 
 </resources>
